# fuzzit

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.agentrail/: instruction-lock.toml  saga.toml
.agentrail/steps/001-step-1.1-workspace-scaffold/: prompt.md  step.toml  summary.md
.agentrail/steps/001-step-1.2-fz-core-types/: prompt.md  step.toml
.agentrail/steps/002-step-1.4-fz-corpus/: prompt.md  step.toml  summary.md
.agentrail/steps/003-step-1.3-fz-manifest/: prompt.md  step.toml  summary.md
.agentrail/steps/004-step-2.1-fz-exec/: prompt.md  step.toml  summary.md
.agentrail/steps/004-step-2.2-fz-classify/: prompt.md  step.toml
.agentrail/steps/005-step-2.4-fz-cli-basic/: prompt.md  step.toml  summary.md
.agentrail/steps/006-step-2.3-fz-artifacts/: prompt.md  step.toml  (+1 more)
crates/fz-artifacts/: Cargo.toml
crates/fz-classify/: Cargo.toml
crates/fz-cli/: Cargo.toml
crates/fz-cli/src/: main.rs
crates/fz-cli/src/commands/: campaign_start.rs  campaign_state.rs  mod.rs  targets_run.rs
crates/fz-cli/tests/: test_target.rs
crates/fz-core/: Cargo.toml
crates/fz-corpus/: Cargo.toml
crates/fz-exec/: Cargo.toml
crates/fz-llm/: Cargo.toml
crates/fz-manifest/: Cargo.toml
crates/fz-mutate/: Cargo.toml
crates/fz-mutate/src/: byte_ops.rs  lib.rs  minimize.rs  mutate.rs  ops.rs  structure_ops.rs  token_ops.rs
crates/fz-mutate/tests/: minimize_test.rs  mutate_test.rs  ops_test.rs
docs/: ai_agent_instructions.md  architecture.md  design.md  plan.md  prd.md  research.txt
examples/: api.toml  compiler.toml  demo.toml  repl.toml  test_target.sh
(+68 files in other folders)
