[workspace]
members = [
    "crates/fz-core",
    "crates/fz-manifest",
    "crates/fz-corpus",
    "crates/fz-exec",
    "crates/fz-classify",
    "crates/fz-mutate",
    "crates/fz-llm",
    "crates/fz-artifacts",
    "crates/fz-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
tempfile = "3"
